src/objects/pse__Team_Schedule_Slot_Type__c.object
<CustomObject>
    <fields>
        <fullName>pse__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Is_Blocking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Blocking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Is_Holiday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Holiday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Is_Weekend__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Weekend</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Weekday, Blocking</fullName>
                </value>
                <value>
                    <fullName>Weekday, Non-blocking</fullName>
                </value>
                <value>
                    <fullName>Weekend, Blocking</fullName>
                </value>
                <value>
                    <fullName>Weekend, Non-blocking</fullName>
                </value>
                <value>
                    <fullName>Holiday, Blocking</fullName>
                </value>
                <value>
                    <fullName>Holiday, Non-Blocking</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Team Schedule Slot Type</label>
    <nameField>
        <displayFormat>TSST-{0000}</displayFormat>
        <label>Team Schedule Slot Type Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Team Schedule Slot Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>